--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -81,7 +81,7 @@ body.signup {
   .container .btn {
     border-radius: 0;
     text-shadow: none;
-    border: 0;
+    //border: 0;
     box-shadow: none;
     color: #ccc;
     background: #333;
@@ -91,7 +91,7 @@ body.signup {
       color: black;
     }
   }
-  .container .btn-warning {
+  > .container > .login > .btn-warning {
     color: black;
     background: $warningBackground;
 
@@ -220,8 +220,9 @@ body.signup {
 		padding: 1px 0;
 		> a {
 			display: table-cell;
-			border-right: 1px solid black;
-			padding: 8px;		
+			border:0;
+			padding: 8px;
+			background-color: #000;	
 		}
 	}
 }
